[package]
name = "lww-table"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fxhash = "0.2.1"
getrandom = "0.2.12"
itertools = "0.12.1"
leb128 = "0.2.5"
postcard = { version = "1.0.8", default-features = false, features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.114"
smallvec = "1.13.1"
smol_str = { version = "0.2.1", features = ["serde"] }
tabled = "0.15.0"
tracing = "0.1.40"
zstd = "0.13.0"
